Misturando HTML, CSS E JS - 07/08/2025

--- a/aula004/index.html
+++ b/aula004/index.html
@@ -13,15 +13,26 @@
         }
         h1 {
             color: rgb(237, 237, 41);
+            padding-top: 15px;
         }
 
+        div {
+            background-color: rgb(240, 210, 169);
+            margin: auto;
+            width: 500px;
+            height: 450px;
+            border-radius: 15px;
+            box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.333);
+        }
 
     </style>
 </head>
 <body>
-    <h1>Olá, mundo!</h1>
-    <p>Partiu JavaScript!</p>
-    <p>E Olá, mundo! Só pra tirar a zica.</p>
+    <div>
+        <h1>Olá, mundo!</h1>
+        <p>Partiu JavaScript!</p>
+        <p>Olá, mundo! Só pra tirar a zica. 😉</p>
+    </div>
     <script>
         window.alert('Minha primeira mensagem!');
         window.confirm('Olá, mundo! Só pra tirar a zica.');
